@startuml

scale max 4096 width
scale max 4096 height
scale 2


rectangle "Presentation" {
class UserController {
    - {static} _store : FileUserStore?
    - {static} _service : UserService?
    + {static} Configure(store:FileUserStore, service:UserService) : void
    + {static} Register(context:HttpListenerContext, username:string, hashedPassword:string) : void
    + {static} Login(context:HttpListenerContext, username:string, hashedPassword:string) : void
    + {static} AddWord(context:HttpListenerContext, userId:Guid, word:string) : void
    + {static} GetWordsFile(context:HttpListenerContext, userId:Guid) : void
    + {static} GetStats(context:HttpListenerContext, userId:Guid) : void
}

class Program
}

rectangle "Infrastructure" {
class FileUserStore

}

rectangle "Application" {
class UserService

}

UserController --> "_store" FileUserStore
UserController --> "_service" UserService
Program --> UserController

@enduml